core/src/main/antlr4/fortress/inputs/.antlr/SmtLibSubsetParser.java
// Generated from /u5/ozila/modeling/fortress/core/src/main/antlr4/fortress/inputs/SmtLibSubset.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SmtLibSubsetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, ID=54, SIMPLE=55, QUOTE=56, STRING=57, NUMBER=58, BIN_NUMBER=59, 
		HEX_NUMBER=60, POS_NUMBER=61, ZERO=62, LETTER=63, NON_ZERO=64, DIGIT=65, 
		DEC_DIGIT=66, BIN_DIGIT=67, HEX_DIGIT=68, SPECIAL=69, PRINTABLE_NOT_QUOTE=70, 
		PRINTABLE_NOT_PIPE_BS=71, WS=72, COMMENT=73;
	public static final int
		RULE_commands = 0, RULE_command = 1, RULE_sorted_var = 2, RULE_sort = 3, 
		RULE_attribute = 4, RULE_term = 5, RULE_letbinding = 6, RULE_binding = 7, 
		RULE_term_attribute = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"commands", "command", "sorted_var", "sort", "attribute", "term", "letbinding", 
			"binding", "term_attribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "'declare-const'", "')'", "'declare-fun'", "'declare-sort'", 
			"'assert'", "'check-sat'", "'set-info'", "'set-logic'", "'get-model'", 
			"'exit'", "'define-fun'", "'_'", "'BitVec'", "':'", "'true'", "'false'", 
			"'ite'", "'let'", "'and'", "'or'", "'distinct'", "'='", "'=>'", "'not'", 
			"'forall'", "'exists'", "'!'", "'closure'", "'reflexive-closure'", "'-'", 
			"'+'", "'*'", "'div'", "'mod'", "'abs'", "'<='", "'<'", "'>='", "'>'", 
			"'concat'", "'bvnot'", "'bvneg'", "'bvand'", "'bvor'", "'bvadd'", "'bvmul'", 
			"'bvudiv'", "'bvurem'", "'bvshl'", "'bvshr'", "':named'", "':pattern'", 
			null, null, null, null, null, null, null, null, "'0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ID", "SIMPLE", "QUOTE", "STRING", 
			"NUMBER", "BIN_NUMBER", "HEX_NUMBER", "POS_NUMBER", "ZERO", "LETTER", 
			"NON_ZERO", "DIGIT", "DEC_DIGIT", "BIN_DIGIT", "HEX_DIGIT", "SPECIAL", 
			"PRINTABLE_NOT_QUOTE", "PRINTABLE_NOT_PIPE_BS", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SmtLibSubset.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SmtLibSubsetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CommandsContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_commands);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(18);
				command();
				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__15) | (1L << T__16) | (1L << ID) | (1L << NUMBER) | (1L << BIN_NUMBER) | (1L << HEX_NUMBER) | (1L << ZERO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declare_constContext extends CommandContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public Declare_constContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Set_infoContext extends CommandContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public Set_infoContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class ExitContext extends CommandContext {
		public ExitContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Get_modelContext extends CommandContext {
		public Get_modelContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Declare_sortContext extends CommandContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public TerminalNode ZERO() { return getToken(SmtLibSubsetParser.ZERO, 0); }
		public Declare_sortContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class AssertContext extends CommandContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public AssertContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Check_satContext extends CommandContext {
		public Check_satContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Set_logicContext extends CommandContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public Set_logicContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class ConstraintContext extends CommandContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ConstraintContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Declare_funContext extends CommandContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public List<SortContext> sort() {
			return getRuleContexts(SortContext.class);
		}
		public SortContext sort(int i) {
			return getRuleContext(SortContext.class,i);
		}
		public Declare_funContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class Define_funContext extends CommandContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<Sorted_varContext> sorted_var() {
			return getRuleContexts(Sorted_varContext.class);
		}
		public Sorted_varContext sorted_var(int i) {
			return getRuleContext(Sorted_varContext.class,i);
		}
		public Define_funContext(CommandContext ctx) { copyFrom(ctx); }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Declare_constContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(23);
				match(T__0);
				setState(24);
				match(T__1);
				setState(25);
				match(ID);
				setState(26);
				sort();
				setState(27);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new Declare_funContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				match(T__0);
				setState(30);
				match(T__3);
				setState(31);
				match(ID);
				setState(32);
				match(T__0);
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0 || _la==ID) {
					{
					{
					setState(33);
					sort();
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				match(T__2);
				setState(40);
				sort();
				setState(41);
				match(T__2);
				}
				break;
			case 3:
				_localctx = new Declare_sortContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				match(T__0);
				setState(44);
				match(T__4);
				setState(45);
				match(ID);
				setState(46);
				match(ZERO);
				setState(47);
				match(T__2);
				}
				break;
			case 4:
				_localctx = new AssertContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				match(T__0);
				setState(49);
				match(T__5);
				setState(50);
				term();
				setState(51);
				match(T__2);
				}
				break;
			case 5:
				_localctx = new Check_satContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				match(T__0);
				setState(54);
				match(T__6);
				setState(55);
				match(T__2);
				}
				break;
			case 6:
				_localctx = new Set_infoContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				match(T__0);
				setState(57);
				match(T__7);
				setState(58);
				attribute();
				setState(59);
				match(T__2);
				}
				break;
			case 7:
				_localctx = new Set_logicContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(61);
				match(T__0);
				setState(62);
				match(T__8);
				setState(63);
				match(ID);
				setState(64);
				match(T__2);
				}
				break;
			case 8:
				_localctx = new Get_modelContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(65);
				match(T__0);
				setState(66);
				match(T__9);
				setState(67);
				match(T__2);
				}
				break;
			case 9:
				_localctx = new ExitContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(68);
				match(T__0);
				setState(69);
				match(T__10);
				setState(70);
				match(T__2);
				}
				break;
			case 10:
				_localctx = new Define_funContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(71);
				match(T__0);
				setState(72);
				match(T__11);
				setState(73);
				match(ID);
				setState(74);
				match(T__0);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(75);
					sorted_var();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(T__2);
				setState(82);
				sort();
				setState(83);
				term();
				setState(84);
				match(T__2);
				}
				break;
			case 11:
				_localctx = new ConstraintContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(86);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sorted_varContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public Sorted_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sorted_var; }
	}

	public final Sorted_varContext sorted_var() throws RecognitionException {
		Sorted_varContext _localctx = new Sorted_varContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sorted_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__0);
			setState(90);
			match(ID);
			setState(91);
			sort();
			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortContext extends ParserRuleContext {
		public SortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort; }
	 
		public SortContext() { }
		public void copyFrom(SortContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Bv_sortContext extends SortContext {
		public TerminalNode NUMBER() { return getToken(SmtLibSubsetParser.NUMBER, 0); }
		public Bv_sortContext(SortContext ctx) { copyFrom(ctx); }
	}
	public static class Sort_nameContext extends SortContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public Sort_nameContext(SortContext ctx) { copyFrom(ctx); }
	}

	public final SortContext sort() throws RecognitionException {
		SortContext _localctx = new SortContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sort);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new Sort_nameContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(ID);
				}
				break;
			case T__0:
				_localctx = new Bv_sortContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(T__0);
				setState(96);
				match(T__12);
				setState(97);
				match(T__13);
				setState(98);
				match(NUMBER);
				setState(99);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	 
		public AttributeContext() { }
		public void copyFrom(AttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Attribute_stringContext extends AttributeContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public TerminalNode STRING() { return getToken(SmtLibSubsetParser.STRING, 0); }
		public Attribute_stringContext(AttributeContext ctx) { copyFrom(ctx); }
	}
	public static class Attribute_idContext extends AttributeContext {
		public List<TerminalNode> ID() { return getTokens(SmtLibSubsetParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmtLibSubsetParser.ID, i);
		}
		public Attribute_idContext(AttributeContext ctx) { copyFrom(ctx); }
	}
	public static class Attribute_dec_digitContext extends AttributeContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public TerminalNode DEC_DIGIT() { return getToken(SmtLibSubsetParser.DEC_DIGIT, 0); }
		public Attribute_dec_digitContext(AttributeContext ctx) { copyFrom(ctx); }
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attribute);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new Attribute_idContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(T__14);
				setState(103);
				match(ID);
				setState(104);
				match(ID);
				}
				break;
			case 2:
				_localctx = new Attribute_stringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(T__14);
				setState(106);
				match(ID);
				setState(107);
				match(STRING);
				}
				break;
			case 3:
				_localctx = new Attribute_dec_digitContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				match(T__14);
				setState(109);
				match(ID);
				setState(110);
				match(DEC_DIGIT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SubContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public SubContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class MultContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public MultContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class ModContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ModContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class LtContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public LtContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class DistinctContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public DistinctContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class ImpContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ImpContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class DivContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public DivContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class Int_literalContext extends TermContext {
		public TerminalNode NUMBER() { return getToken(SmtLibSubsetParser.NUMBER, 0); }
		public Int_literalContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class NegContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public NegContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvaddContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvaddContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class NotContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public NotContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class AndContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public AndContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class Int_zeroContext extends TermContext {
		public TerminalNode ZERO() { return getToken(SmtLibSubsetParser.ZERO, 0); }
		public Int_zeroContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class Term_with_attributesContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<Term_attributeContext> term_attribute() {
			return getRuleContexts(Term_attributeContext.class);
		}
		public Term_attributeContext term_attribute(int i) {
			return getRuleContext(Term_attributeContext.class,i);
		}
		public Term_with_attributesContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvorContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvorContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class LetContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<LetbindingContext> letbinding() {
			return getRuleContexts(LetbindingContext.class);
		}
		public LetbindingContext letbinding(int i) {
			return getRuleContext(LetbindingContext.class,i);
		}
		public LetContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class IteContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public IteContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class ClosureContext extends TermContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ClosureContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class GeContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public GeContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvandContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvandContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvnegContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public BvnegContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvudivContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvudivContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class OrContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public OrContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvnotContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public BvnotContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class VarContext extends TermContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public VarContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class ForallContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<BindingContext> binding() {
			return getRuleContexts(BindingContext.class);
		}
		public BindingContext binding(int i) {
			return getRuleContext(BindingContext.class,i);
		}
		public ForallContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class FalseContext extends TermContext {
		public FalseContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvuremContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvuremContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class Reflexive_closureContext extends TermContext {
		public TerminalNode ID() { return getToken(SmtLibSubsetParser.ID, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Reflexive_closureContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class EqContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public EqContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class BvmulContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public BvmulContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class GtContext extends TermContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public GtContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class Hex_literalContext extends TermContext {
